Changed to HttpsUrlConnection implementation