@@ -3,63 +3,54 @@ package net.retsat1.starlab.inpost;
 import net.retsat1.starlab.inpost.exceptions.HttpBadStatusCodeException;
 import net.retsat1.starlab.inpost.exceptions.HttpRequestException;
 
-import org.apache.http.HttpResponse;
-import org.apache.http.HttpStatus;
-import org.apache.http.NameValuePair;
-import org.apache.http.StatusLine;
-import org.apache.http.client.ClientProtocolException;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.entity.UrlEncodedFormEntity;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.impl.client.DefaultHttpClient;
-import org.apache.http.message.BasicNameValuePair;
+import org.apache.commons.io.IOUtils;
 
-import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.net.URI;
-import java.util.ArrayList;
-import java.util.List;
+import java.io.InputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
+
+import javax.net.ssl.HttpsURLConnection;
 
 public class HttpQuery {
 
-    protected static final String TRACKING_URL = "http://www.inpost.pl/index.php?id=89";
+    protected static final String TRACKING_URL = "https://inpost.pl/pl/pomoc/znajdz-przesylke?parcel=";
 
     public String execute(final String numer_przesylki)
             throws HttpRequestException {
-        HttpClient httpclient = new DefaultHttpClient();
-        HttpResponse response;
+        HttpsURLConnection connection = null;
         try {
-            HttpPost request = new HttpPost(URI.create(TRACKING_URL));
-            List<NameValuePair> nameValuePairs = new ArrayList<NameValuePair>();
-            nameValuePairs.add(new BasicNameValuePair("numer_przesylki", numer_przesylki));
-            request.setEntity(new UrlEncodedFormEntity(nameValuePairs));
+            URL url = new URL(TRACKING_URL + numer_przesylki);
+            HttpsURLConnection.setFollowRedirects(true);
+            connection = (HttpsURLConnection) url.openConnection();
 
-            response = httpclient.execute(request);
-            StatusLine statusLine = response.getStatusLine();
-            if (statusLine.getStatusCode() != HttpStatus.SC_OK) {
+            int statusLine = connection.getResponseCode();
+            if (statusLine != HttpURLConnection.HTTP_OK) {
 
                 // Closes the connection when status is not OK
-                response.getEntity().getContent().close();
-                throw new HttpBadStatusCodeException(
-                        statusLine.getReasonPhrase());
+                throw new HttpBadStatusCodeException(String.valueOf(statusLine));
             }
 
-            return extractPageAsString(response);
+            try {
+                Thread.sleep(5000);
+            } catch (InterruptedException e) {
+                
+            }
 
-        } catch (ClientProtocolException e) {
-            throw new HttpRequestException(e);
+            return extractPageAsString(connection.getInputStream());
+
         } catch (IOException e) {
             throw new HttpRequestException(e);
+        } finally {
+            if (connection != null)
+                connection.disconnect();
         }
 
     }
 
-    private String extractPageAsString(HttpResponse response)
+    private String extractPageAsString(InputStream stream)
             throws IOException {
-        ByteArrayOutputStream out = new ByteArrayOutputStream();
-        response.getEntity().writeTo(out);
-        out.close();
-        String responseString = out.toString();
+        String responseString = IOUtils.toString(stream);
         return responseString;
     }
 }
